Fix position of the compatibility filtering UI on mobile (bug 969244)

--- a/src/media/css/compat-filtering.styl
+++ b/src/media/css/compat-filtering.styl
@@ -38,7 +38,7 @@
     .multi-app-tile .compatibility-filtering {
         padding: 0;
         position: absolute;
-        top: -35px;
+        top: -40px;
     }
 
     .category .compatibility-filtering {
@@ -48,7 +48,7 @@
     #search-results .compatibility-filtering {
         left: 10px;
         position: absolute;
-        top: 48px;
+        top: 44px;
     }
 
     #search-results .search-listing {
